; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/zstd/programs/extr_datagen.c_RDG_genBuffer.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/zstd/programs/extr_datagen.c_RDG_genBuffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LTSIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RDG_genBuffer(i8* %0, i64 %1, double %2, double %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca double, align 8
  %9 = alloca double, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store double %2, double* %8, align 8
  store double %3, double* %9, align 8
  store i32 %4, i32* %10, align 4
  %14 = load i32, i32* %10, align 4
  store i32 %14, i32* %11, align 4
  %15 = load i32, i32* @LTSIZE, align 4
  %16 = zext i32 %15 to i64
  %17 = call i8* @llvm.stacksave()
  store i8* %17, i8** %12, align 8
  %18 = alloca i32, i64 %16, align 16
  store i64 %16, i64* %13, align 8
  %19 = mul nuw i64 4, %16
  %20 = trunc i64 %19 to i32
  %21 = call i32 @memset(i32* %18, i32 48, i32 %20)
  %22 = load double, double* %9, align 8
  %23 = fcmp ole double %22, 0.000000e+00
  br i1 %23, label %24, label %27

24:                                               ; preds = %5
  %25 = load double, double* %8, align 8
  %26 = fdiv double %25, 4.500000e+00
  store double %26, double* %9, align 8
  br label %27

27:                                               ; preds = %24, %5
  %28 = load double, double* %9, align 8
  %29 = fmul double %28, 2.560000e+02
  %30 = fadd double %29, 1.000000e-03
  %31 = fptosi double %30 to i32
  %32 = call i32 @RDG_fillLiteralDistrib(i32* %18, i32 %31)
  %33 = load i8*, i8** %6, align 8
  %34 = load i64, i64* %7, align 8
  %35 = load double, double* %8, align 8
  %36 = call i32 @RDG_genBlock(i8* %33, i64 %34, i32 0, double %35, i32* %18, i32* %11)
  %37 = load i8*, i8** %12, align 8
  call void @llvm.stackrestore(i8* %37)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @memset(i32*, i32, i32) #2

declare dso_local i32 @RDG_fillLiteralDistrib(i32*, i32) #2

declare dso_local i32 @RDG_genBlock(i8*, i64, i32, double, i32*, i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
